--- a/ProAcc/Views/Customers/GetCustomerById.cshtml
+++ b/ProAcc/Views/Customers/GetCustomerById.cshtml
@@ -76,7 +76,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Phone</label>
                 <div class="col-md-10">
                     <input type="text" class="form-control" value="@Model.Phone" id="txtCustomerPhone" maxlength="10" />
@@ -84,18 +84,18 @@
                 <div>
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblCustomerPhone">&nbsp;</span>
                 </div>
-            </div>
-            @*<div class="form-group">
+            </div>*@
+            <div class="form-group">
                 <label class="control-label col-md-5 required">Contact Person Phone</label>
                 <div class="col-md-10">
                     <input type="hidden" class="form-control" value="@Model.Countrycode" id="selectedCountry">
-                    <input type="tel" class="form-control" value="@Model.Phone" id="txtCustomerPhone" style="width: 150%;">
+                    <input type="tel" class="form-control" value="@Model.Phone" id="txtCustomerPhone" style="width: 135%;">
                 </div>
                 <div>
                     &nbsp;&nbsp;&nbsp; <span id="valid-msg" class="hide Class_span">&nbsp;</span>
                     &nbsp;&nbsp;&nbsp;<span id="error-msg" class="hide Class_span">&nbsp;</span>
                 </div>
-            </div>*@
+            </div>
         </div>
 
         @*<div class="form-group">
@@ -165,79 +165,77 @@
         $("#txtCustomerPhone").keypress(function (e) {
             if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
                 event.preventDefault();
-                $("#lblCustomerPhone").html("Numbers Only").show().fadeOut(5000);
+               // $("#lblCustomerPhone").html("Numbers Only").show().fadeOut(5000);
                 validatecustomer();
             }
             else {
-                $("#lblCustomerPhone").html("").hide();
+                //$("#lblCustomerPhone").html("").hide();
                 validatecustomer();
             }
         });
 
-        $("#txtCustomerPhone").blur(function () {
-            //debugger
-            phone = $(this).val();
-            phone = phone.replace(/[^0-9]/g,'');
-            if (phone.length != 10) {
-                $("#lblCustomerPhone").html("Phone number must be 10 digits").show().fadeOut(5000);
-                validatecustomer();
-            }
-            else {
-                $("#lblCustomerPhone").html("").hide();
-                validatecustomer();
-            }
+       // $("#txtCustomerPhone").blur(function () {
+       //     //debugger
+       //     phone = $(this).val();
+       //     phone = phone.replace(/[^0-9]/g,'');
+       //     if (phone.length != 10) {
+       //         $("#lblCustomerPhone").html("Phone number must be 10 digits").show().fadeOut(5000);
+       //         validatecustomer();
+       //     }
+       //     else {
+       //         $("#lblCustomerPhone").html("").hide();
+       //         validatecustomer();
+       //     }
 
-       });
+       //});
 
-    //    var input = document.querySelector("#txtCustomerPhone"),
-    //    errorMsg = document.querySelector("#error-msg"),
-    //    validMsg = document.querySelector("#valid-msg");
+        var input = document.querySelector("#txtCustomerPhone"),
+        errorMsg = document.querySelector("#error-msg"),
+        validMsg = document.querySelector("#valid-msg");
         
-    //// Error messages based on the code returned from getValidationError
-    //var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
-    //    //input.setCountry("gb");
-    //    var intl = window.intlTelInput(input, {
-    //    utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.js"
-    //    //utilsScript: "~/Asset/js/utils.js"
-    //});
+    // Error messages based on the code returned from getValidationError
+    var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
+        var intl = window.intlTelInput(input, {        
+            utilsScript: "/Asset/js/utils.js",
+            separateDialCode: true 
+    });
 
-    //var reset = function() {
-    //    input.classList.remove("error");
-    //    errorMsg.innerHTML = "";
-    //    errorMsg.classList.add("hide");
-    //    validMsg.classList.add("hide");
-    //};
+    var reset = function() {
+        input.classList.remove("error");
+        errorMsg.innerHTML = "";
+        errorMsg.classList.add("hide");
+        validMsg.classList.add("hide");
+    };
 
-    //    var iti = window.intlTelInputGlobals.getInstance(input);
-    //    //iti.setCountry("in");
-    //    var a = $("#selectedCountry").val();
-    //    iti.setCountry(a);
+        var iti = window.intlTelInputGlobals.getInstance(input);
+        var a = $("#selectedCountry").val();
+        iti.setCountry(a);
 
-    //     var countryCode;
-    //    input.addEventListener('countrychange', function () {
-    //        countryCode = intl.getSelectedCountryData().iso2;
-    //        $("#selectedCountry").val(countryCode);
-    //       //alert(countryCode)
-    //    })
-    //    // Validate on blur event   
-    //    input.addEventListener('blur', function () {
+         var countryCode;
+        input.addEventListener('countrychange', function () {
+            countryCode = intl.getSelectedCountryData().iso2;
+            $("#selectedCountry").val(countryCode);
+        })
+        // Validate on blur event   
+        input.addEventListener('blur', function () {
 
-    //    reset();
-    //    if(input.value.trim()){
-    //        if(intl.isValidNumber()){
-    //            validMsg.classList.remove("hide");
-    //        }else{
-    //            input.classList.add("error");
-    //            var errorCode = intl.getValidationError();
-    //            errorMsg.innerHTML = errorMap[errorCode];
-    //            errorMsg.classList.remove("hide");
-    //        }
-    //    }
-    //});
+        reset();
+        if(input.value.trim()){
+            if(intl.isValidNumber()){
+                validMsg.classList.remove("hide");
+            }else{
+                input.classList.add("error");
+                var errorCode = intl.getValidationError();
+                errorMsg.innerHTML = errorMap[errorCode];
+                errorMsg.classList.remove("hide");
+            }
+            validatecustomer();
+        }
+    });
 
-    //// Reset on keyup/change event
-    //input.addEventListener('change', reset);
-    //    input.addEventListener('keyup', reset);
+        // Reset on keyup/change event
+        input.addEventListener('change', reset);
+        input.addEventListener('keyup', reset);
 
 
 
@@ -259,7 +257,7 @@
 
 
         function validatecustomer() {
-            debugger;
+            
            var CompanyName = $("#txtCompanyName").val().trim();
             var IndustrySector = $("#drpIndustrySector").val()
             var Contact = $("#txtContact").val().trim();
@@ -269,8 +267,8 @@
             var lblCompanyName = $("#lblCompanyName").text().trim();
             var lblIndustrySector = $("#lblIndustrySector").text().trim();
             var lblContact = $("#lblContact").text().trim();
-            var lblcustphone = $("#lblCustomerPhone").text().trim();
-            // var lblcustphone = $("#error-msg").text().trim();
+            //var lblcustphone = $("#lblCustomerPhone").text().trim();
+            var lblcustphone = $("#error-msg").text().trim();
             var lblcustEmail = $("#lblCustomerEmail").text().trim();
 
 
