--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -455,6 +455,7 @@
                     $("#drpApplicationArea").val(0);
                     $('#drpPhase').val(0);
                     $('#drpRole').val(0);
+                    $('#drpBlock').val(0);
                     $("#btnActivityCreCreate").show()
                     $("#btntivityCreUpdate").hide()
                     $("#btnAddNew").hide()
