--- a/ProAcc/Views/IssueTrack/Create.cshtml
+++ b/ProAcc/Views/IssueTrack/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ProAcc.BL.Model.IssueTrackModel
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/shared/_Layout.cshtml";
@@ -8,115 +8,109 @@
     Html.RenderAction("InstanceSelection", "ProjectMonitor");
 }
 
-<a class="card-title">Create Issue</a>
-<hr />
-<div style="padding:1em;" id="CreateIssue">
-    <div class="row">
-        <div class="col-6">
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Issue Name</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtIssueName" />
+
+    <div style="padding:1em;" id="CreateIssue">
+        <a class="card-title">Create Issue</a>
+        <hr />
+        <div class="row">
+            <div class="col-6">
+                <div class="form-group">
+                    <label class="control-label col-md-4 required">Issue Name</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtIssueName" />
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblIssueName">&nbsp;</span>
+                    </div>
                 </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblIssueName">&nbsp;</span>
+
+                <div class="form-group">
+                    <label class="control-label col-md-4 required">Task</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtTask" />
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblTask">&nbsp;</span>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-md-4 required">Start Date</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtStartDate" />
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblStartDate">&nbsp;</span>
+                    </div>
                 </div>
             </div>
+            <div class="col-6">
 
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Task</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtTask" />
+                <div class="form-group">
+                    <label class="control-label col-md-4 required">End Date</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtEndDate" />
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblEndDate">&nbsp;</span>
+                    </div>
                 </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblTask">&nbsp;</span>
-                </div>
-            </div>
 
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Start Date</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtStartDate" />
+                <div class="form-group">
+                    <label class="control-label col-md-4 required">Status</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtStatus" />
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblStatus">&nbsp;</span>
+                    </div>
                 </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblStartDate">&nbsp;</span>
-                </div>
-            </div>
 
-            <div class="form-group">
-                <label class="control-label col-md-4 required">End Date</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtEndDate" />
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblEndDate">&nbsp;</span>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Status</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtStatus" />
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblStatus">&nbsp;</span>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Assigned To</label>
-                <div class="col-md-10">
-                    @*<select class="form-control" id="drpIndustrySector">
-                            <option value="0">Select Industry</option>
-                            @foreach (var item in ViewBag.Assigned)
+                <div class="form-group">
+                    <label class="control-label col-md-4 required">Assigned To</label>
+                    <div class="col-md-10">
+                        <select class="form-control" id="drpAssignedTo">
+                            <option value="0">Select AssignedTo</option>
+                            @foreach (var item in ViewBag.AssignedTo)
                             {
-                                <option value="@item.IndustrySector_ID">@item.Industry_Sector</option>
+                                <option value="@item.UserId">@item.Name</option>
                             }
-                        </select>*@
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblIndustrySector">&nbsp;</span>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Last Updated</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtLastUpdated" />
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblLastUpdated">&nbsp;</span>
+                        </select>
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblIndustrySector">&nbsp;</span>
+                    </div>
                 </div>
             </div>
+            <div class="col-12">
+                <div class="form-group">
+                    <label class="control-label col-md-4 required">Comments</label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtComments" />
+                    </div>
+                    <div>
+                        &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblComments">&nbsp;</span>
+                    </div>
+                </div>
 
-            <div class="form-group">
-                <label class="control-label col-md-4 required">Comments</label>
-                <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtComments" />
-                </div>
-                <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblComments">&nbsp;</span>
-                </div>
             </div>
 
         </div>
+        <div class="row">
+            <div class="col-lg-12">
 
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
-
-            <div class="col-md-offset-2 col-md-12">
-                <button type="button" id="btnCustomerCreate" class="btn btn-primary ld-ext-right" onclick="this.classList.toggle('running')">
-                    Create
-                    <div class="ld ld-ring ld-spin"></div>
-                </button>
-                <div class="col-lg-3" style="float:right;">
-                    @Html.ActionLink("Back to List", "Index", "IssueTrack")
+                <div class="col-md-offset-2 col-md-12">
+                    <button type="button" id="btnCustomerCreate" class="btn btn-primary ld-ext-right" onclick="this.classList.toggle('running')">
+                        Create
+                        <div class="ld ld-ring ld-spin"></div>
+                    </button>
+                    <div class="col-lg-3" style="float:right;">
+                        @Html.ActionLink("Back to List", "Index", "IssueTrack")
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 <script>
     $(document).ready(function () {
@@ -124,6 +118,12 @@
         $('#SubmitInstance').prop("disabled", true);
         $("#CreateIssue").hide();
 
+         $("#txtStartDate").datepicker({
+            dateFormat: "dd-M-yy",
+         });
+         $('#txtEndDate').datepicker({         
+             dateFormat: "dd-M-yy",
+         }); 
     });
      $('#IDCustomer').change(function () {
             $("#IDInstance").prop("disabled", false);
